-- ============================================================================
-- Módulo SST — Cumplimiento de requisitos por colaborador
-- Prototipo. Ejecutar en el SQL Editor de Supabase.
-- ============================================================================

-- ---------------------------------------------------------------------------
-- Enums
-- ---------------------------------------------------------------------------
create type employee_status as enum ('active', 'inactive');

create type recurrence_unit as enum ('once', 'day', 'week', 'month', 'year');

create type period_alignment as enum ('assignment_start', 'fixed_anchor');

create type evidence_effective_policy as enum ('document_validity', 'submitted_at', 'approved_at');

create type assignment_status as enum ('active', 'inactive');

create type evidence_status as enum ('pending', 'approved', 'rejected', 'superseded');

create type requirement_period_status as enum ('pending', 'compliant', 'partially_compliant', 'non_compliant');

create type current_compliance_status as enum ('pending', 'compliant', 'non_compliant', 'inactive');

-- ---------------------------------------------------------------------------
-- employees: representa la tabla de Empleados que YA existe en el monolito.
-- Solo se incluye aquí para que el prototipo sea ejecutable. full_name /
-- job_title son los campos que el módulo SST lee; no los crea ni los modifica.
-- ---------------------------------------------------------------------------
create table employees (
  id          bigint generated by default as identity primary key,
  full_name   varchar(255) not null,
  national_id varchar(32),
  job_title   varchar(255),
  status      employee_status not null default 'active',
  created_at  timestamptz not null default now(),
  updated_at  timestamptz not null default now()
);

-- ---------------------------------------------------------------------------
-- requirements: identidad estable del requisito. Todo lo mutable vive en
-- requirement_versions, para no reescribir la historia de cumplimiento cuando
-- la empresa cambia la periodicidad de un requisito.
-- ---------------------------------------------------------------------------
create table requirements (
  id         bigint generated by default as identity primary key,
  code       varchar(100) not null,
  is_active  boolean not null default true,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create unique index requirements_code_uniq on requirements (code);
create index requirements_is_active_idx on requirements (is_active);

create table requirement_versions (
  id             bigint generated by default as identity primary key,
  requirement_id bigint not null references requirements (id) on delete cascade,
  version_number integer not null,

  name        varchar(255) not null,
  description text,

  -- Periodicidad: cada cuánto el ente fiscalizador exige evidencia vigente.
  recurrence_unit     recurrence_unit not null,
  recurrence_interval integer not null default 1 check (recurrence_interval > 0),

  -- assignment_start: los períodos se cuentan desde que el requisito aplica al
  -- empleado. fixed_anchor: se alinean a un calendario común (ej. trimestres).
  period_alignment period_alignment not null,
  anchor_date      date,

  -- Qué fecha hace "efectiva" a la evidencia. Es la palanca que separa la
  -- vigencia del documento del momento en que la empresa lo puede acreditar.
  evidence_effective_policy evidence_effective_policy not null default 'document_validity',

  effective_from  date not null,
  effective_until date,

  created_at timestamptz not null default now(),

  constraint requirement_versions_anchor_chk
    check (period_alignment <> 'fixed_anchor' or anchor_date is not null),
  constraint requirement_versions_window_chk
    check (effective_until is null or effective_until >= effective_from)
);

create unique index requirement_versions_number_uniq
  on requirement_versions (requirement_id, version_number);
create index requirement_versions_window_idx
  on requirement_versions (requirement_id, effective_from, effective_until);

-- ---------------------------------------------------------------------------
-- employee_requirement_assignments: qué requisito aplica a qué empleado y
-- durante qué ventana. Sin esta tabla no se puede responder "no todos los
-- requisitos aplican a todos los empleados".
-- ---------------------------------------------------------------------------
create table employee_requirement_assignments (
  id bigint generated by default as identity primary key,

  employee_id    bigint not null references employees (id) on delete cascade,
  requirement_id bigint not null references requirements (id) on delete cascade,

  applies_from  date not null,
  applies_until date,

  status assignment_status not null default 'active',

  assigned_by_user_id bigint,
  assignment_source   varchar(100),

  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now(),

  constraint assignments_window_chk
    check (applies_until is null or applies_until >= applies_from)
);

create unique index assignments_uniq
  on employee_requirement_assignments (employee_id, requirement_id, applies_from);
create index assignments_by_employee_idx
  on employee_requirement_assignments (employee_id, status);
create index assignments_by_requirement_idx
  on employee_requirement_assignments (requirement_id, status);

-- ---------------------------------------------------------------------------
-- requirement_periods: materialización de las ventanas que el fiscalizador va
-- a revisar. Una fila por (asignación, período). Se generan a partir de la
-- periodicidad de la versión vigente en ese tramo.
-- ---------------------------------------------------------------------------
create table requirement_periods (
  id bigint generated by default as identity primary key,

  assignment_id          bigint not null references employee_requirement_assignments (id) on delete cascade,
  requirement_version_id bigint not null references requirement_versions (id),

  period_start date not null,
  period_end   date,

  status requirement_period_status not null default 'pending',

  last_evaluated_at timestamptz,
  created_at        timestamptz not null default now()
);

create unique index requirement_periods_uniq
  on requirement_periods (assignment_id, period_start);
create index requirement_periods_window_idx
  on requirement_periods (assignment_id, period_start, period_end);
create index requirement_periods_status_idx
  on requirement_periods (status, period_start, period_end);

-- ---------------------------------------------------------------------------
-- evidences: el documento cargado. valid_from/valid_until es la vigencia REAL
-- del documento, independiente de la periodicidad del requisito.
-- ---------------------------------------------------------------------------
create table evidences (
  id bigint generated by default as identity primary key,

  assignment_id          bigint not null references employee_requirement_assignments (id) on delete cascade,
  requirement_version_id bigint not null references requirement_versions (id),

  status evidence_status not null default 'pending',

  valid_from  date not null,
  valid_until date,

  submitted_at timestamptz not null default now(),
  approved_at  timestamptz,
  rejected_at  timestamptz,

  uploaded_by_user_id bigint,
  reviewed_by_user_id bigint,

  rejection_reason text,

  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now(),

  constraint evidences_validity_chk
    check (valid_until is null or valid_until >= valid_from)
);

create index evidences_lookup_idx
  on evidences (assignment_id, status, valid_from, valid_until);
create index evidences_expiry_idx on evidences (status, valid_until);
create index evidences_submitted_idx on evidences (submitted_at);

create table evidence_files (
  id          bigint generated by default as identity primary key,
  evidence_id bigint not null references evidences (id) on delete cascade,

  storage_key       varchar(500) not null,
  original_filename varchar(255) not null,
  content_type      varchar(100),
  size_bytes        bigint,

  created_at timestamptz not null default now()
);

create unique index evidence_files_storage_key_uniq on evidence_files (storage_key);
create index evidence_files_evidence_idx on evidence_files (evidence_id);

-- ---------------------------------------------------------------------------
-- period_evidence_coverages: el cruce calculado. Qué tramo de un período queda
-- cubierto por qué evidencia. Es lo que permite auditar el "por qué" de un
-- estado sin recalcular nada.
-- ---------------------------------------------------------------------------
create table period_evidence_coverages (
  id bigint generated by default as identity primary key,

  period_id   bigint not null references requirement_periods (id) on delete cascade,
  evidence_id bigint not null references evidences (id) on delete cascade,

  coverage_start date not null,
  coverage_end   date,

  calculated_at timestamptz not null default now()
);

create unique index period_evidence_coverages_uniq
  on period_evidence_coverages (period_id, evidence_id, coverage_start);
create index period_evidence_coverages_window_idx
  on period_evidence_coverages (period_id, coverage_start, coverage_end);
create index period_evidence_coverages_evidence_idx
  on period_evidence_coverages (evidence_id);

-- ---------------------------------------------------------------------------
-- current_compliance: proyección de lectura. Una fila por asignación con el
-- estado de HOY. Responde preguntas 1 y 2 con un solo índice, sin recorrer
-- períodos ni evidencias.
-- ---------------------------------------------------------------------------
create table current_compliance (
  assignment_id bigint primary key references employee_requirement_assignments (id) on delete cascade,

  employee_id    bigint not null references employees (id) on delete cascade,
  requirement_id bigint not null references requirements (id) on delete cascade,

  current_period_id     bigint references requirement_periods (id) on delete set null,
  effective_evidence_id bigint references evidences (id) on delete set null,

  status current_compliance_status not null,

  compliant_since date,
  covered_until   date,

  calculated_at timestamptz not null default now()
);

create index current_compliance_by_employee_idx on current_compliance (employee_id, status);
create index current_compliance_by_requirement_idx on current_compliance (requirement_id, status);
create index current_compliance_status_idx on current_compliance (status);

-- ---------------------------------------------------------------------------
-- compliance_gaps: los tramos SIN cumplimiento ya transcurridos. Responde la
-- pregunta 3 ("¿hubo días sin cumplimiento?") en O(filas del empleado).
-- ---------------------------------------------------------------------------
create table compliance_gaps (
  id bigint generated by default as identity primary key,

  employee_id    bigint not null references employees (id) on delete cascade,
  requirement_id bigint not null references requirements (id) on delete cascade,

  assignment_id bigint not null references employee_requirement_assignments (id) on delete cascade,
  period_id     bigint not null references requirement_periods (id) on delete cascade,

  gap_start date not null,
  gap_end   date,

  calculated_at timestamptz not null default now(),
  created_at    timestamptz not null default now(),
  updated_at    timestamptz not null default now()
);

create unique index compliance_gaps_uniq
  on compliance_gaps (assignment_id, period_id, gap_start);
create index compliance_gaps_by_employee_idx
  on compliance_gaps (employee_id, gap_start, gap_end);
create index compliance_gaps_by_requirement_idx
  on compliance_gaps (requirement_id, gap_start, gap_end);

-- ---------------------------------------------------------------------------
-- Acceso: el prototipo no implementa login y asume un único super admin, así
-- que se deja RLS deshabilitado y se otorga acceso al rol anon.
-- EN PRODUCCIÓN esto va con RLS por company_id + rol de encargado SST.
-- ---------------------------------------------------------------------------
grant usage on schema public to anon, authenticated;
grant all on all tables in schema public to anon, authenticated;
grant all on all sequences in schema public to anon, authenticated;
