// ============================================================================
// Módulo SST — Cumplimiento de requisitos por colaborador
// Pegar en https://dbdiagram.io
// ============================================================================

Enum employee_status {
  active
  inactive
}

Enum recurrence_unit {
  once
  day
  week
  month
  year
}

Enum period_alignment {
  assignment_start [note: 'los períodos se cuentan desde que el requisito aplica al empleado']
  fixed_anchor     [note: 'alineados a un calendario común: trimestres civiles, años']
}

Enum evidence_effective_policy {
  document_validity [note: 'acredita desde la fecha que declara el documento']
  submitted_at      [note: 'acredita desde que se cargó: subirla tarde deja días sin cumplimiento']
  approved_at       [note: 'acredita desde que un revisor la aprobó']
}

Enum assignment_status {
  active
  inactive
}

Enum evidence_status {
  pending
  approved
  rejected
  superseded
}

Enum requirement_period_status {
  pending
  compliant
  partially_compliant
  non_compliant
}

Enum current_compliance_status {
  pending
  compliant
  non_compliant
  inactive
}

// ---------------------------------------------------------------------------
// Preexistente en el monolito
// ---------------------------------------------------------------------------

Table employees {
  id bigint [pk]
  status employee_status [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  note: 'Tabla que ya existe. El módulo SST solo la lee.'
}

// ---------------------------------------------------------------------------
// Qué se exige
// ---------------------------------------------------------------------------

Table requirements {
  id bigint [pk]

  code varchar(100) [not null]
  is_active boolean [not null, default: true]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (code) [unique]
    (is_active)
  }

  note: 'Identidad estable del requisito. Todo lo mutable vive en requirement_versions.'
}

Table requirement_versions {
  id bigint [pk]
  requirement_id bigint [not null]

  version_number integer [not null]

  name varchar(255) [not null]
  description text

  recurrence_unit recurrence_unit [not null]
  recurrence_interval integer [not null, default: 1]

  period_alignment period_alignment [not null]
  anchor_date date

  evidence_effective_policy evidence_effective_policy [not null, default: 'document_validity']

  effective_from date [not null]
  effective_until date

  created_at timestamp [not null, default: `now()`]

  indexes {
    (requirement_id, version_number) [unique]
    (requirement_id, effective_from, effective_until)
  }

  note: '''
  Cambiar la periodicidad NO edita esta fila: cierra la versión vigente y abre
  una nueva. Así los períodos históricos siguen evaluándose con la regla que
  estaba en vigor cuando ocurrieron, que es lo que revisa un fiscalizador.
  '''
}

// ---------------------------------------------------------------------------
// A quién se le exige
// ---------------------------------------------------------------------------

Table employee_requirement_assignments {
  id bigint [pk]

  employee_id bigint [not null]
  requirement_id bigint [not null]

  applies_from date [not null]
  applies_until date

  status assignment_status [not null, default: 'active']

  assigned_by_user_id bigint
  assignment_source varchar(100)

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (employee_id, requirement_id, applies_from) [unique]
    (employee_id, status)
    (requirement_id, status)
  }

  note: '''
  Resuelve "no todos los requisitos aplican a todos los empleados": sin una fila
  acá no se exige nada. applies_from fija desde cuándo se evalúa, así que no se
  inventan períodos anteriores a la asignación.
  '''
}

// ---------------------------------------------------------------------------
// Qué se revisa — derivada de la periodicidad
// ---------------------------------------------------------------------------

Table requirement_periods {
  id bigint [pk]

  assignment_id bigint [not null]
  requirement_version_id bigint [not null]

  period_start date [not null]
  period_end date

  status requirement_period_status [not null, default: 'pending']

  last_evaluated_at timestamp
  created_at timestamp [not null, default: `now()`]

  indexes {
    (assignment_id, period_start) [unique]
    (assignment_id, period_start, period_end)
    (status, period_start, period_end)
  }

  note: '''
  Las ventanas que revisa el ente fiscalizador. Apunta a la VERSIÓN con que se
  evaluó, no al requisito, para que la historia sea inmutable. No se generan
  períodos futuros: nadie incumple algo que todavía no empieza.
  '''
}

// ---------------------------------------------------------------------------
// Qué se acredita
// ---------------------------------------------------------------------------

Table evidences {
  id bigint [pk]

  assignment_id bigint [not null]
  requirement_version_id bigint [not null]

  status evidence_status [not null, default: 'pending']

  valid_from date [not null]
  valid_until date

  submitted_at timestamp [not null]
  approved_at timestamp
  rejected_at timestamp

  uploaded_by_user_id bigint
  reviewed_by_user_id bigint

  rejection_reason text

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (assignment_id, status, valid_from, valid_until)
    (status, valid_until)
    (submitted_at)
  }

  note: '''
  valid_from/valid_until es la vigencia REAL del documento, independiente de la
  periodicidad del requisito: un examen exigido cada 6 meses puede tener validez
  de 12 y cubrir dos períodos.
  El índice (status, valid_until) es la cola de vencimientos que alimenta el
  recálculo diario.
  '''
}

Table evidence_files {
  id bigint [pk]
  evidence_id bigint [not null]

  storage_key varchar(500) [not null]
  original_filename varchar(255) [not null]
  content_type varchar(100)
  size_bytes bigint

  created_at timestamp [not null, default: `now()`]

  indexes {
    storage_key [unique]
    evidence_id
  }

  note: 'Una evidencia puede respaldarse con más de un archivo.'
}

// ---------------------------------------------------------------------------
// El cruce calculado
// ---------------------------------------------------------------------------

Table period_evidence_coverages {
  id bigint [pk]

  period_id bigint [not null]
  evidence_id bigint [not null]

  coverage_start date [not null]
  coverage_end date

  calculated_at timestamp [not null, default: `now()`]

  indexes {
    (period_id, evidence_id, coverage_start) [unique]
    (period_id, coverage_start, coverage_end)
    evidence_id
  }

  note: '''
  Intersección entre el período y el intervalo efectivo de la evidencia. Es la
  traza auditable del cálculo: permite explicar POR QUÉ un período quedó en un
  estado sin volver a calcular nada.
  '''
}

// ---------------------------------------------------------------------------
// Las respuestas — proyecciones de lectura
// ---------------------------------------------------------------------------

Table current_compliance {
  assignment_id bigint [pk]

  employee_id bigint [not null]
  requirement_id bigint [not null]

  current_period_id bigint
  effective_evidence_id bigint

  status current_compliance_status [not null]

  compliant_since date
  covered_until date

  calculated_at timestamp [not null]

  indexes {
    (employee_id, status)
    (requirement_id, status)
    (status)
  }

  note: '''
  Preguntas 1 y 2 del enunciado. Una fila por asignación con el estado de HOY.
  Se lee por (employee_id, status) para el detalle del empleado y por
  (requirement_id, status) para la vista de fiscalización.
  covered_until alimenta las alertas de vencimiento.
  '''
}

Table compliance_gaps {
  id bigint [pk]

  employee_id bigint [not null]
  requirement_id bigint [not null]

  assignment_id bigint [not null]
  period_id bigint [not null]

  gap_start date [not null]
  gap_end date

  calculated_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (assignment_id, period_id, gap_start) [unique]
    (employee_id, gap_start, gap_end)
    (requirement_id, gap_start, gap_end)
  }

  note: '''
  Pregunta 3 del enunciado: los tramos en que el empleado NO cumplía, aunque hoy
  sí cumpla. Se responde leyendo esta tabla, sin recorrer períodos ni evidencias.
  '''
}

// ---------------------------------------------------------------------------
// Relaciones
// ---------------------------------------------------------------------------

Ref: requirement_versions.requirement_id > requirements.id

Ref: employee_requirement_assignments.employee_id > employees.id
Ref: employee_requirement_assignments.requirement_id > requirements.id

Ref: requirement_periods.assignment_id > employee_requirement_assignments.id
Ref: requirement_periods.requirement_version_id > requirement_versions.id

Ref: evidences.assignment_id > employee_requirement_assignments.id
Ref: evidences.requirement_version_id > requirement_versions.id

Ref: evidence_files.evidence_id > evidences.id

Ref: period_evidence_coverages.period_id > requirement_periods.id
Ref: period_evidence_coverages.evidence_id > evidences.id

Ref: current_compliance.assignment_id > employee_requirement_assignments.id
Ref: current_compliance.employee_id > employees.id
Ref: current_compliance.requirement_id > requirements.id
Ref: current_compliance.current_period_id > requirement_periods.id
Ref: current_compliance.effective_evidence_id > evidences.id

Ref: compliance_gaps.employee_id > employees.id
Ref: compliance_gaps.requirement_id > requirements.id
Ref: compliance_gaps.assignment_id > employee_requirement_assignments.id
Ref: compliance_gaps.period_id > requirement_periods.id
